reduced top level make
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@6 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/Makefile
+++ b/vmb/Makefile
@@ -1,13 +1,8 @@
 
-CFLAGS= -g -Wall
-
-GENERICS = bus-util.o main.o message.o  bus-arith.o param.o option.o error.o
-SUBDIRS  = mmix screen mother keyboard ram rom disk mmixio
+SUBDIRS  = src doc
      
 
-.PHONY: hardware $(SUBDIRS) clean
-     
-hardware: $(GENERICS) $(SUBDIRS)
+.PHONY: $(SUBDIRS) clean
      
 $(SUBDIRS):
 	$(MAKE) -C $@
@@ -18,5 +13,3 @@ clean:
 	  $(MAKE) -C $$dir clean; \
 	done
 
-TAGS: *.c *.h */*.c */*.h
-	etags *.c *.h */*.c */*.h
