added a utility directory and updated the Makefile
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@9 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -1,8 +1,7 @@
 
 CFLAGS= -g -Wall
 
-GENERICS = bus-util.o main.o message.o  bus-arith.o param.o option.o error.o
-SUBDIRS  = mmix screen mother keyboard ram rom disk mmixio
+SUBDIRS  = util mother mmix screen keyboard ram rom disk mmixio
      
 
 .PHONY: hardware $(SUBDIRS) clean
