added an install option to the Makefile improved the motherboard to take care of closing devices and give better debug output
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@23 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/Makefile
+++ b/vmb/Makefile
@@ -2,10 +2,19 @@
 SUBDIRS  = src doc
      
 
-.PHONY: $(SUBDIRS) clean
+.PHONY: $(SUBDIRS) clean install
      
 $(SUBDIRS):
 	$(MAKE) -C $@
+
+
+export BINDIR = $(CURDIR)/bin
+
+install:
+	for dir in $(SUBDIRS); do \
+	  $(MAKE) -C $$dir install; \
+	done
+
      
 clean:
 	rm -f *.o *~ 
