--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -1,7 +1,7 @@
 
 CFLAGS= -g -Wall
 
-SUBDIRS  = util mother mmix screen keyboard ram rom disk hostdisk vram
+SUBDIRS  = util mother mmix screen keyboard ram rom flash disk hostdisk vram
      
 
 .PHONY: hardware $(SUBDIRS) clean
@@ -10,6 +10,15 @@ hardware: $(GENERICS) $(SUBDIRS)
      
 $(SUBDIRS):
 	$(MAKE) -C $@
+
+
+install:
+	for dir in $(SUBDIRS); do \
+	  $(MAKE) -C $$dir install; \
+	done
+
+
+
      
 clean:
 	rm -f *.o *~ 
