--- a/vmb/src/hostdisk/Makefile
+++ b/vmb/src/hostdisk/Makefile
@@ -13,6 +13,11 @@ utilities:
 $(PROG): $(PROG).c  utilities
 	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb  -o $(PROG)
 
+
+install: all
+	install $(PROG) $(BINDIR)
+
+
 clean:
 	rm -f $(PROG) *.o *~
 
