--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -102,6 +102,9 @@ doc:    mmix-doc.ps mmixal.dvi mmix-sim.dvi
 	dvips -n13 mmixal.dvi -o mmixal-intro.ps
 	dvips -n8 mmix-sim.dvi -o mmix-sim-intro.ps
 
+install:
+	install $(PROG) $(BINDIR)
+
 
 clean:
 	rm -f *~ *.o *.tex *.log *.dvi *.toc *.idx *.scn *.ps core $(PROG)
