removeing extra blank lines
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@29 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mother/Makefile
+++ b/vmb/src/mother/Makefile
@@ -17,6 +17,10 @@ install: all
 	install $(PROG) $(BINDIR)
 	install default.mmc $(BINDIR)
 
+
+TAGS:
+	etags *.c *.h ../util/*.c ../util/*.h
+
 clean:
 	rm -f $(PROG) *.o *~
 
