made mmix work better with traps and use swym as a means to signal the debugger if xyz!=0
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@38 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -102,7 +102,7 @@ doc:    mmix-doc.ps mmixal.dvi mmix-sim.dvi
 	dvips -n13 mmixal.dvi -o mmixal-intro.ps
 	dvips -n8 mmix-sim.dvi -o mmix-sim-intro.ps
 
-install:
+install: all
 	install $(PROG) $(BINDIR)
 
 
