Added teminate message; terminates application. Fixed some minor bugs: all threads closed on exit
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@49 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Java/vmb.properties
+++ b/vmb/src/Java/vmb.properties
@@ -1,5 +1,5 @@
-host=mbox.informatik.fh-muenchen.de
+host=localhost
 port=9002
-startaddress=2000000000000000
+startaddress=0002000000000000
 width=640
 height=480
