intermediate commit after programming flash
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@52 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/keyboard/Makefile
+++ b/vmb/src/keyboard/Makefile
@@ -1,20 +1,22 @@
 PROG= keyboard
 UTILDIR = ../util
-CFLAGS= -g -Wall
+CFLAGS= -g -D_REENTRANT -Wall
 CC = gcc
 
 
-all: $(PROG)
+all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
 
 
 $(PROG): $(PROG).c  utilities
-	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb  -o $(PROG)
+	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb -lvmbopt -lpthread  -o $(PROG)
 install:
 	install $(PROG) $(BINDIR)
 
 clean:
 	rm -f $(PROG) *.o *~
 
+TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
+	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
