--- a/vmb/src/winvram/winvram.vcproj
+++ b/vmb/src/winvram/winvram.vcproj
@@ -211,6 +211,10 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\icon.ico"
+				>
+			</File>
+			<File
 				RelativePath=".\win32.rc"
 				>
 			</File>
