--- a/vmb/src/util/Makefile
+++ b/vmb/src/util/Makefile
@@ -5,9 +5,8 @@ AR = ar
 ARFLAGS = cru
 RANLIB = ranlib
 
-VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o
+VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o vmbterminate.o
 
-VMBOPTOBJECTS = param.o option.o version.o
 VMBOBJECTS = cache.o vmb.o message.o bus-arith.o error.o $(VMBDEFAULTS)
 
 .PHONY:  clean
