addes hex display to screen and hex input to option and param not jet complet edited all default.mmc files
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@57 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/screen/win32.rc
+++ b/vmb/src/screen/win32.rc
@@ -52,6 +52,7 @@ BEGIN
             MENUITEM "Help",                        ID_HELP
         END
         MENUITEM "Minimize",                    ID_MINIMIZE
+        MENUITEM "He&x Output",                 ID_HEXOUTPUT
     END
 END
 
