--- a/vmb/src/ram/ram.vcproj
+++ b/vmb/src/ram/ram.vcproj
@@ -119,7 +119,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				UseUnicodeResponseFiles="false"
-				AdditionalIncludeDirectories="..\util"
+				AdditionalIncludeDirectories="..\util; ..\opt"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
