getting the unix stuff to run again. example1 and example2 are working again.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@69 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -1,8 +1,9 @@
 
 CFLAGS= -g -Wall
 
-SUBDIRS  = util mother mmix screen keyboard ram rom flash disk hostdisk vram
-     
+SUBDIRS  = util opt device mmix screen keyboard ram rom flash hostdisk vram mother
+   
+#          disk  
 
 .PHONY: hardware $(SUBDIRS) clean
      
