--- a/vmb/src/flash/Makefile
+++ b/vmb/src/flash/Makefile
@@ -1,6 +1,9 @@
 PROG= flash
 UTILDIR = ../util
-CFLAGS= -g -D_REENTRANT -Wall
+OPTDIR = ../opt
+UTILDIR = ../util
+CFLAGS= -g  -D_REENTRANT -Wall  -I $(UTILDIR) -I $(OPTDIR)
+LDFLAGS= -L $(OPTDIR) -lvmbopt -L $(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -8,15 +11,19 @@ all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
+	$(MAKE) -C  $(OPTDIR)
 
 
 $(PROG): $(PROG).c  utilities
-	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb  -lvmbopt -lpthread  -o $(PROG)
+	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
+
+
+TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
+	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
+
 install:
 	install $(PROG) $(BINDIR)
 
 clean:
 	rm -f $(PROG) *.o *~
 
-TAGS: *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
-	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h
