--- a/vmb/src/mother/Makefile
+++ b/vmb/src/mother/Makefile
@@ -1,6 +1,8 @@
 PROG= mother
 UTILDIR = ../util
-CFLAGS= -g  -D_REENTRANT -Wall
+OPTDIR = ../opt
+CFLAGS= -g  -D_REENTRANT -Wall  -I $(UTILDIR) -I $(OPTDIR)
+LDFLAGS= -L $(OPTDIR) -lvmbopt -L $(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -8,17 +10,18 @@ all: $(PROG)
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
+	$(MAKE) -C  $(OPTDIR)
 
 
 $(PROG): $(PROG).c  utilities
-	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb  -lvmbopt -o $(PROG)
+	$(CC) $(CFLAGS) $(PROG).c $(LDFLAGS) -o $(PROG)
 
 install: all
 	install $(PROG) $(BINDIR)
 
 
 TAGS:
-	etags *.c *.h ../util/*.c ../util/*.h
+	etags *.c *.h $(UTILDIR)/*.c $(UTILDIR)/*.h $(OPTDIR)/*.c $(OPTDIR)/*.h
 
 clean:
 	rm -f $(PROG) *.o *~
