--- a/vmb/src/opt/Makefile
+++ b/vmb/src/opt/Makefile
@@ -1,24 +1,16 @@
 
-CFLAGS= -O3 -ggdb -D_REENTRANT -Wall -pg
+CFLAGS= -O3 -ggdb -D_REENTRANT -Wall -pg -I ../util
 CC= gcc
 AR = ar
 ARFLAGS = cru
 RANLIB = ranlib
 
-VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o
-
-VMBOPTOBJECTS = param.o option.o version.o
-VMBOBJECTS = cache.o vmb.o message.o bus-arith.o error.o $(VMBDEFAULTS)
+VMBOPTOBJECTS = param.o option.o version.o optiontab.o
 
 .PHONY:  clean
      
-all: libvmb.a libvmbopt.a
+all: libvmbopt.a
      
-libvmb.a: $(VMBOBJECTS)
-	rm -f $@
-	$(AR) $(ARFLAGS) $@ $(VMBOBJECTS)
-	$(RANLIB) $@
-
 libvmbopt.a: $(VMBOPTOBJECTS)
 	rm -f $@
 	$(AR) $(ARFLAGS) $@ $(VMBOPTOBJECTS)
@@ -27,8 +19,6 @@ libvmbopt.a: $(VMBOPTOBJECTS)
 install:
 	echo nothing to do
 
-devicetemplate: devicetemplate.o libvmb.a
-	$(CC) $(CFLAGS) $< -L . -lvmb -lpthread -o $@
 
 clean:
 	rm -f *.o *.a *~ 
