--- a/vmb/src/ram/Makefile
+++ b/vmb/src/ram/Makefile
@@ -1,6 +1,9 @@
 PROG= ram
 UTILDIR = ../util
-CFLAGS= -g -D_REENTRANT -Wall
+OPTDIR = ../opt
+UTILDIR = ../util
+CFLAGS= -g  -D_REENTRANT -Wall  -I $(UTILDIR) -I $(OPTDIR)
+LDFLAGS= -L $(OPTDIR) -lvmbopt -L $(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
@@ -8,10 +11,11 @@ all: $(PROG)
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
+	$(MAKE) -C  $(OPTDIR)
 
 
-$(PROG): $(PROG).c  utilities
-	$(CC) $(CFLAGS) -I $(UTILDIR) $(PROG).c  -L $(UTILDIR) -lvmb -lvmbopt -lpthread  -o $(PROG)
+$(PROG): $(PROG).c  main.c utilities
+	$(CC) $(CFLAGS) $(PROG).c main.c $(LDFLAGS) -o $(PROG)
 
 install: all
 	install $(PROG) $(BINDIR)
