--- a/vmb/src/util/Makefile
+++ b/vmb/src/util/Makefile
@@ -5,7 +5,7 @@ AR = ar
 ARFLAGS = cru
 RANLIB = ranlib
 
-VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o vmbterminate.o
+VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o vmbdisconnected.o vmbterminate.o
 
 VMBOBJECTS = cache.o vmb.o message.o bus-arith.o error.o $(VMBDEFAULTS)
 
