spaces after -L and -I in the Makefiles deleted missing files added some updates to reflect changes in the file structure
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@82 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/rom/Makefile
+++ b/vmb/src/rom/Makefile
@@ -2,12 +2,12 @@ PROG= rom
 UTILDIR = ../util
 OPTDIR = ../opt
 UTILDIR = ../util
-CFLAGS= -g  -D_REENTRANT -Wall  -I $(UTILDIR) -I $(OPTDIR)
-LDFLAGS= -L $(OPTDIR) -lvmbopt -L $(UTILDIR) -lvmb -lpthread
+CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
+LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
-all: $(PROG) bios.img bios.elf TAGS
+all: $(PROG) bios.img TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
