--- a/vmb/src/mmixgdb/Makefile
+++ b/vmb/src/mmixgdb/Makefile
@@ -23,8 +23,7 @@ all: mmix
 utilities:
 	$(MAKE) -C  $(UTILDIR)
 
-OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o 
-
+OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o remote-utils.o gdb.o
 abstime.h: abstime
 	./abstime > abstime.h
 
