[umps]: on rake bootstrap, do libtoolize --force too.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@100 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/umps/Rakefile
+++ b/vmb/src/umps/Rakefile
@@ -14,10 +14,11 @@ task :bootstrap do |t|
   sh 'aclocal'
   sh 'autoconf'
   sh 'automake --add-missing'
-  sh './configure --with-cross=/home/mh/dipl/toolchain/bin'
+  sh 'libtoolize --force'
+  sh './configure --with-cross=/home/mh/bin'
   sh 'make distclean'
   #rm_r "src/.deps/"
-  sh './configure --with-cross=/home/mh/dipl/toolchain/bin'
+  sh './configure --with-cross=/home/mh/bin'
 end
 
 task :build do |t|
