the mmix version for gdb is commint to a alpha status ... the clock device was developed for a paper requiring a benchmark it is added for the public here.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@106 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixgdb/Makefile
+++ b/vmb/src/mmixgdb/Makefile
@@ -23,7 +23,7 @@ all: mmix
 utilities:
 	$(MAKE) -C  $(UTILDIR)
 
-OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o remote-utils.o gdb.o
+OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o remote-utils.o buffers.o gdb.o
 abstime.h: abstime
 	./abstime > abstime.h
 
