--- a/vmb/src/disk/win32.rc
+++ b/vmb/src/disk/win32.rc
@@ -123,6 +123,9 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
     EDITTEXT        IDC_ADDRESS,43,7,136,11,ES_AUTOHSCROLL
     LTEXT           "Address",IDC_STATIC,7,7,26,8
+    LTEXT           "File",IDC_STATIC,7,23,12,8
+    EDITTEXT        IDC_FILE,43,23,77,11,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Browse...",IDC_BROWSE,129,23,50,14
 END
 
 
