rewrote the service thread and debugged under UNIX
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@128 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -1,9 +1,11 @@
 
 CFLAGS= -g -Wall
 
-SUBDIRS  = util opt device mmix screen keyboard ram rom flash hostdisk vram mother
-   
-#          disk  
+SUBDIRS  = util opt device mother\
+           mmix mmixgdb \
+           screen keyboard vram \
+           ram rom flash \
+           hostdisk disk  
 
 .PHONY: hardware $(SUBDIRS) clean
      
