changing the common debug interface for win32
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@131 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/disk/win32.rc
+++ b/vmb/src/disk/win32.rc
@@ -180,7 +180,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_CLASS               "VMB"
-    IDS_TITLE               "VMBdisk"
+    IDS_TITLE               "VMB Disk"
 END
 
 #endif    // German (Germany) resources
