--- a/vmb/src/timer/win32.rc
+++ b/vmb/src/timer/win32.rc
@@ -192,7 +192,7 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_CLASS               "VMBTimer"
+    IDS_CLASS               "VMB"
     IDS_TITLE               "VMB Timer"
 END
 
