--- a/vmb/src/windevice/win32.rc
+++ b/vmb/src/windevice/win32.rc
@@ -175,8 +175,8 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_CLASS               "MMIXram"
-    IDS_TITLE               "MMIX RAM"
+    IDS_CLASS               "VMB"
+    IDS_TITLE               "VMB Generic"
 END
 
 #endif    // German (Germany) resources
