--- a/vmb/src/flash/win32.rc
+++ b/vmb/src/flash/win32.rc
@@ -178,8 +178,8 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_CLASS               "MMIXrom"
-    IDS_TITLE               "MMIX ROM"
+    IDS_CLASS               "VMB"
+    IDS_TITLE               "VMB Flash"
 END
 
 #endif    // German (Germany) resources
