moving bitmapTo Region to a central file in opt
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@133 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -161,6 +161,10 @@
 				RelativePath=".\param.c"
 				>
 			</File>
+			<File
+				RelativePath=".\winbitmap.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
