adding parameters for interacting and show_operating_system
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@155 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixgdb/Makefile
+++ b/vmb/src/mmixgdb/Makefile
@@ -13,9 +13,10 @@ LD=$(MMIXDIR)/mmix-ld
 CFLAGS = -ggdb -D_REENTRANT -Wall 
 PROG= mmix
 UTILDIR = ../util
+OPTDIR = ../opt
 CC = gcc
-INCDIRS = -I$(UTILDIR)
-LIBS    = -L$(UTILDIR) -lm -lvmb -lpthread
+INCDIRS = -I$(UTILDIR) -I$(OPTDIR) 
+LIBS    = -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lm -lvmb -lpthread
 
 
 all: mmix
@@ -23,7 +24,9 @@ all: mmix
 utilities:
 	$(MAKE) -C  $(UTILDIR)
 
-OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o remote-utils.o buffers.o gdb.o
+OBJECTS=mmix-arith.o mmix-sim.o address.o mmix-bus.o breaks.o \
+        remote-utils.o buffers.o gdb.o optiontab.o
+
 abstime.h: abstime
 	./abstime > abstime.h
 
