latest changes to the win32 mmix with gdb support
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@158 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/disk/win32.rc
+++ b/vmb/src/disk/win32.rc
@@ -124,8 +124,10 @@ BEGIN
     EDITTEXT        IDC_ADDRESS,43,7,136,11,ES_AUTOHSCROLL
     LTEXT           "Address",IDC_STATIC,7,7,26,8
     LTEXT           "File",IDC_STATIC,7,23,12,8
-    EDITTEXT        IDC_FILE,43,23,77,11,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "Browse...",IDC_BROWSE,129,23,50,14
+    EDITTEXT        IDC_FILE,43,21,77,11,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Browse...",IDC_BROWSE,129,20,50,14
+    EDITTEXT        IDC_INTERRUPT,43,35,136,11,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Interrupt",IDC_STATIC,7,35,27,8
 END
 
 
