--- a/vmb/src/mmixgdb/mmix.vcproj
+++ b/vmb/src/mmixgdb/mmix.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\optiontab.c"
+				>
+			</File>
+			<File
 				RelativePath=".\remote-utils.c"
 				>
 			</File>
