added a verbose entry in the context menu for ram and rom
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@162 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/rom/win32.rc
+++ b/vmb/src/rom/win32.rc
@@ -46,6 +46,7 @@ BEGIN
         MENUITEM "&Settings...",                ID_SETTINGS
         MENUITEM SEPARATOR
         MENUITEM "&Debug",                      ID_DEBUG
+        MENUITEM "&Verbose",                    ID_VERBOSE
         POPUP "&Help"
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
@@ -157,6 +158,7 @@ END
 
 STRINGTABLE 
 BEGIN
+    IDS_CLASS               "VMB"
     IDS_TITLE               "VMB ROM"
 END
 
