--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -213,7 +213,7 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath=".\win32class.rc"
+				RelativePath=".\win32connect.rc"
 				>
 			</File>
 		</Filter>
