adding the verbose entry to all context menues
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@163 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/sevensegment/win32.rc
+++ b/vmb/src/sevensegment/win32.rc
@@ -36,6 +36,7 @@ BEGIN
         MENUITEM "&Settings...",                ID_SETTINGS
         MENUITEM SEPARATOR
         MENUITEM "&Debug",                      ID_DEBUG
+        MENUITEM "&Verbose",                    ID_VERBOSE
         POPUP "&Help"
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
