--- a/vmb/src/mother/win32.rc
+++ b/vmb/src/mother/win32.rc
@@ -45,6 +45,7 @@ BEGIN
         MENUITEM "&Infos ...",                  ID_INFO
         MENUITEM SEPARATOR
         MENUITEM "&Debug",                      ID_DEBUG
+        MENUITEM "&Verbose",                    ID_VERBOSE
         POPUP "&Help"
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
