--- a/vmb/src/winvram/win32.rc
+++ b/vmb/src/winvram/win32.rc
@@ -36,6 +36,7 @@ BEGIN
         MENUITEM "&Settings...",                ID_SETTINGS
         MENUITEM SEPARATOR
         MENUITEM "&Debug",                      ID_DEBUG
+        MENUITEM "&Verbose",                    ID_VERBOSE
         POPUP "&Help"
         BEGIN
             MENUITEM "&About",                      ID_HELP_ABOUT
