--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -15,3 +15,16 @@ BEGIN
     EDITTEXT        IDC_THE_PORT,32,24,40,12,ES_AUTOHSCROLL
     LTEXT           "Port:",IDC_STATIC,7,26,16,8
 END
+
+
+
+IDD_DEBUG DIALOG DISCARDABLE  0, 0, 186, 94
+STYLE WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | 
+    WS_THICKFRAME
+CAPTION "Debug"
+FONT 8, "MS Sans Serif"
+BEGIN
+    EDITTEXT        IDC_DEBUG,3,3,180,88,ES_MULTILINE | ES_AUTOVSCROLL | 
+                    ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT 
+                    WS_TABSTOP
+END
