--- a/vmb/src/winvram/win32.rc
+++ b/vmb/src/winvram/win32.rc
@@ -92,7 +92,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,129,64,50,14
     EDITTEXT        IDC_THE_SERVER,31,7,148,12,ES_AUTOHSCROLL
     LTEXT           "Host:",IDC_STATIC,7,7,18,8
-    EDITTEXT        IDC_THE_PORT,32,24,40,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_THE_PORT,31,24,40,12,ES_AUTOHSCROLL
     LTEXT           "Port:",IDC_STATIC,7,26,16,8
 END
 
@@ -104,17 +104,26 @@ BEGIN
     EDITTEXT        IDC_DEBUG,3,3,180,88,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
 END
 
-IDD_SETTINGS DIALOG  0, 0, 186, 95
+IDD_SETTINGS DIALOGEX 0, 0, 188, 134
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,55,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
-    EDITTEXT        IDC_ADDRESS,43,7,136,11,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,131,96,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,112,50,14
+    EDITTEXT        IDC_ADDRESS,60,7,121,12,ES_AUTOHSCROLL
     LTEXT           "Address",IDC_STATIC,7,7,26,8
-    EDITTEXT        IDC_RAMSIZE,43,20,136,11,ES_AUTOHSCROLL
-    LTEXT           "Size",IDC_STATIC,7,20,14,8
+    EDITTEXT        IDC_FRAMEWIDTH,60,22,121,12,ES_AUTOHSCROLL
+    LTEXT           "Frame width",IDC_STATIC,7,22,39,8
+    EDITTEXT        IDC_FRAMEHEIGHT,60,37,121,12,ES_AUTOHSCROLL
+    LTEXT           "Frame height",IDC_STATIC,7,37,42,8
+    EDITTEXT        IDC_WIDTH,60,52,121,12,ES_AUTOHSCROLL
+    LTEXT           "Visible width",IDC_STATIC,7,52,40,8
+    EDITTEXT        IDC_HEIGHT,60,67,121,12,ES_AUTOHSCROLL
+    LTEXT           "Visible height",IDC_STATIC,7,67,42,8
+    EDITTEXT        IDC_ZOOM,60,82,121,12,ES_AUTOHSCROLL
+    LTEXT           "Zoom",IDC_STATIC,7,82,19,8
+    
 END
 
 
@@ -153,9 +162,9 @@ BEGIN
     IDD_SETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 181
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 127
     END
 END
 #endif    // APSTUDIO_INVOKED
